# weather_data

./: README.md  process_weather_data.py  pyproject.toml  visualize_state_vector.py
output_data/: Albuquerque_state_vector_D.csv  Atlanta_state_vector_D.csv  Beersheba_state_vector_D.csv  Boston_state_vector_D.csv  Charlotte_state_vector_D.csv  Chicago_state_vector_D.csv  Dallas_state_vector_D.csv  Denver_state_vector_D.csv  Detroit_state_vector_D.csv  Eilat_state_vector_D.csv  Haifa_state_vector_D.csv  Houston_state_vector_D.csv  Indianapolis_state_vector_D.csv  Jacksonville_state_vector_D.csv  Jerusalem_state_vector_D.csv  Kansas City_state_vector_D.csv  Las Vegas_state_vector_D.csv  Los Angeles_state_vector_D.csv  Miami_state_vector_D.csv  Minneapolis_state_vector_D.csv  Montreal_state_vector_D.csv  Nahariyya_state_vector_D.csv  Nashville_state_vector_D.csv  New York_state_vector_D.csv  Philadelphia_state_vector_D.csv  Phoenix_state_vector_D.csv  Pittsburgh_state_vector_D.csv  Portland_state_vector_D.csv  Saint Louis_state_vector_D.csv  San Antonio_state_vector_D.csv  San Diego_state_vector_D.csv  San Francisco_state_vector_D.csv  Seattle_state_vector_D.csv  Tel Aviv District_state_vector_D.csv  Toronto_state_vector_D.csv  Vancouver_state_vector_D.csv
